[package]
name = "exploring_rapier2d"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
eyre = "0.6.5"
rapier2d = { version = "0.8.0", features = [ "simd-stable" ] }
nalgebra = "0.26.2"